--- a/src/components/BlogSection.css
+++ b/src/components/BlogSection.css
@@ -15,7 +15,7 @@
     text-align: center;
     font-size: 2.5rem;
     font-weight: 700;
-    color: var(--secondary-color);
+    color: var(--primary-color);
     margin-bottom: 4rem;
 }
 
