--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,7 +10,7 @@
   padding: 1rem 2rem;
   background-color: rgba(20, 20, 40, 0.8);
   backdrop-filter: blur(10px);
-  color: white;
+  color: var(--primary-color);
   position: fixed;
   width: 100%;
   top: 0;
@@ -29,7 +29,7 @@
 }
 
 .navbar-logo a {
-  color: white;
+  color: var(--primary-color);
   text-decoration: none;
 }
 
