--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 90vh;
   position: relative;
-  background-color: #1a1a1a; /* Fallback color while images load */
+  background-color: #660000 /* Fallback color while images load */
 }
 
 .hero-swiper {
