--- a/src/components/DailyInsights.css
+++ b/src/components/DailyInsights.css
@@ -2,7 +2,7 @@
 
 /* Color palette from the images */
 :root {
-  --image-bg: #141414;
+  --image-bg: #f5f5f5;
   --image-container-bg: #222222;
   --image-primary: #FFB833;
   --image-text: #BDBDBD;
