--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #141414; /* Light background for the whole page */
+  background-color: #f5f5f5; /* Light background for the whole page */
   color: #333;
 }
 
