--- a/src/components/ServicesSection.css
+++ b/src/components/ServicesSection.css
@@ -3,7 +3,7 @@
 
 /* Define the color palette */
 :root {
-  --image-bg: #141414;
+  --image-bg: #f5f5f5;
   --image-container-bg: #222222;
   --image-primary: #FFB833;
   --image-text: #BDBDBD;
