--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 90vh;
   position: relative;
-  background-color: #ffffff; /* Light background tone */
+  background-color: #f5f5f5; /* Light background tone */
 }
 
 .hero-swiper {
