--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -79,7 +79,7 @@
 
 .connect-button {
   background-color: #ffb833;
-  color: #13172c;
+  color: #E05320;
   border: none;
   padding: 1rem;
   font-size: 1.1rem;
