--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 /* src/components/Footer.css */
 .site-footer {
-     background: #13172C;
+     background: #E05320;
     color: var(--text-color);
     padding-top: 4rem;
     border-top: 2px solid var(--primary-color);
