--- a/src/components/PromotionModal.css
+++ b/src/components/PromotionModal.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(18, 14, 10, 0.7);
+    background:#E05320;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
     display: flex;
@@ -18,8 +18,9 @@
 
 .modal-content {
     position: relative;
-    background: var(--dark-accent);
-    background-image: radial-gradient(circle at top left, rgba(255, 184, 51, 0.1), transparent 40%);
+    background: #E05320;
+    background-image:#E05320
+;
     padding: 3rem;
     border-radius: 20px;
     max-width: 650px;
@@ -76,7 +77,8 @@
 
 .modal-option-card {
     padding: 2rem 1rem;
-    background-color: rgba(18, 14, 10, 0.8);
+    background-color:#E05320
+;
     border: 1px solid transparent;
     border-radius: 12px;
     transition: all 0.3s ease;
